framework of site done. needs tweaks and animations

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 			<p class="light-type grey-type">Class sizes are kept small to facilitate collaborative learning and space will fill up quickly. Check out the <span style="color:#eb1767">FAQ Page</span> to learn more.</p>
 		</div>
 		<hr class="style-hr">
+		
 		<table class="apply-table light-type grey-type">
 			<thead>
 				<tr class="table-headers">
@@ -131,5 +132,56 @@
 	</div>
 </div>
 
+<!-- MAP SECTION -->
+
+<div class="map-container">
+	<div class="pink-overlay">
+		<div class="map-info">
+			<p class="light-text" id="contact-title">CONTACT US</p>
+			<img src="assets/contact-location.png" class="image-icons">
+			<p class="light-text">334 Blackwell Street
+			Suite B017
+			Durham, NC 27701</p>
+			<img src="assets/contact-phone.png" class="image-icons">
+			<p class="light-text">1-855-762-7446</p>
+			<img src="assets/contact-twitter.png" class="image-icons">
+			<p class="light-text">@smashingboxes</p>
+			<img src="assets/contact-fb.png" class="image-icons">
+			<p class="light-text">/smashingboxes</p>
+			<p class="light-text">We’re looking for progressive business partners to help support the school! Contact us about joining the Durham Advisory Board. Feel free to reach out to academy@smashingboxes.com for details.</p>
+		</div>
+	</div>
+</div>
+
+<!-- FOOTER -->
+
+<div class="footer">
+	<div class="foot-section">
+		<img src="assets/ironyard_footer.png" class="footer-logos">
+		<img src="assets/footer-icon-sb.png" class="footer-logos">	
+	</div>
+	<div class="foot-section">
+		<p class="form-text light-type">Sign up for our newsletter</p>
+		<form>
+			<input type="text" class="form-input">
+			<button type="submit" class="table-btn">Apply
+			</button>
+		</form>
+	</div>
+	<div class="foot-section" style="position: relative">
+		<div class="social-links">
+			<img src="assets/instagram-footer.png">
+			<img src="assets/twitter-footer.png">
+			<img src="assets/fb-footer.png">
+		</div>
+	</div>
+</div>
+
 </body>
 </html>
+
+
+
+
+
+
